Adding a config flag for menu collapse

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -402,7 +402,8 @@
     	"image": "assets/icons/forkme.svg",
     	"title": "Fork me on github",
 		"href": "{{ getv "/ansyn/menu/forkme/url" "https://github.com/ansyn/ansyn" }}"
-    }
+    },
+    "isCollapsible": false
   },
   "loginConfig": {
   	"baseUrl": "{{ getv "/ansyn/login/baseurl" "http://ansyn.io:9001/api/v1/login" }}",
