--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -1,39 +1,62 @@
 <div class="menu-wrapper">
 
-	<div class="menu" [class.expanded]="expand">
+	<div class="menu" #menu [class.expanded]="expand" [class.collapsed]="collapse">
 
-		<ng-container *ngFor="let menuItem of menuItemsAsArray$ | async">
+		<ng-container *ngIf="!collapse">
 
-			<div
-				class="menu-btn"
-				[class.active]="isActive(menuItem.name)"
-				(click)="toggleItem(menuItem.name)">
+			<ng-container *ngFor="let menuItem of menuItemsAsArray$ | async">
 
-				<i [ngClass]="menuItem.iconClass"></i>
-				<span class="badge" [hidden]="hideBadge(menuItem.badge)">{{menuItem.badge}}</span>
-				{{menuItem.name}}
+				<div
+					class="menu-btn"
+					[class.active]="isActive(menuItem.name)"
+					(click)="toggleItem(menuItem.name)">
+
+					<i [ngClass]="menuItem.iconClass"></i>
+					<span class="badge" [hidden]="hideBadge(menuItem.badge)">{{menuItem.badge}}</span>
+					{{menuItem.name}}
+				</div>
+
+			</ng-container>
+
+			<ng-container *ngIf="menuConfig?.isCollapsible">
+				<div
+					class="menu-btn hide-menu"
+					(click)="startToggleMenuCollapse()">
+					<i class="icon-hide-menu" title="Hide menu"></i>
+				</div>
+			</ng-container>
+
+			<div class="logo">
+
+				<ng-container *ngIf="menuConfig?.forkMe?.active">
+					<a class="forkMe" [href]="menuConfig.forkMe?.href" target="_blank">
+						<img [src]="menuConfig.forkMe?.image" [alt]="menuConfig.forkMe?.title"
+							 [title]="menuConfig.forkMe?.title">
+					</a>
+				</ng-container>
+
+				<div class="mode"
+					 *ngIf="menuConfig?.mode"
+					 [style.color]="menuConfig.color"
+					 [style.background]="menuConfig.background"
+					 [style.border]="'1px sollid' + menuConfig.color"
+				>{{menuConfig.mode}}
+				</div>
+				<img [src]="menuConfig.path" [alt]="version" [title]="version">
 			</div>
 
 		</ng-container>
 
-		<div class="logo">
+		<ng-container *ngIf="collapse">
 
-			<ng-container *ngIf="menuConfig?.forkMe?.active">
-				<a class="forkMe" [href]="menuConfig.forkMe?.href" target="_blank">
-					<img [src]="menuConfig.forkMe?.image" [alt]="menuConfig.forkMe?.title"
-						 [title]="menuConfig.forkMe?.title">
-				</a>
-			</ng-container>
-
-			<div class="mode"
-				 *ngIf="menuConfig?.mode"
-				 [style.color]="menuConfig.color"
-				 [style.background]="menuConfig.background"
-				 [style.border]="'1px sollid' + menuConfig.color"
-			>{{menuConfig.mode}}
+			<div
+				class="menu-btn show-menu"
+				(click)="startToggleMenuCollapse()">
+				<i class="icon-show-menu" title="Main menu"></i>
 			</div>
-			<img [src]="menuConfig.path" [alt]="version" [title]="version">
-		</div>
+
+		</ng-container>
+
 	</div>
 
 	<div class="container" #container [@expand]="expand" (@expand.done)="onExpandDone()"
