--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -20,6 +20,12 @@ div.menu-wrapper {
 		z-index: @z-index-menu;
 		width: @menu-width;
 		height: 100%;
+		transition: width 0.5s;
+
+		&.collapsed {
+			width: @menu-collapsed-width;
+			justify-content: center;
+		}
 
 		div.menu-btn {
 			position: relative;
@@ -66,6 +72,7 @@ div.menu-wrapper {
 			}
 		}
 	}
+
 	div.container {
 		position: absolute;
 
@@ -135,6 +142,15 @@ div.menu-wrapper {
 			margin-bottom: 5px;
 		}
 
+	}
+
+	div.hide-menu {
+		width: 100%;
+		margin-bottom: 5px;
+	}
+
+	div.show-menu {
+		width: 100%;
 	}
 }
 
