fixing show-menu icon size

--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -25,6 +25,10 @@ div.menu-wrapper {
 		&.collapsed {
 			width: @menu-collapsed-width;
 			justify-content: center;
+
+			div.menu-btn i {
+				font-size: 20px;
+			}
 		}
 
 		div.menu-btn {
