--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -45,7 +45,7 @@
 
 			<li>
 					<button class='removeFeature' (click)="removeFeature()">
-						<i class="icon-close" tooltip-value="Delete" tooltip-class="bottom"></i>
+						<i class="icon-close-big" tooltip-value="Delete" tooltip-class="bottom"></i>
 					</button>
 			</li>
 		</ul>
