add to tmple by cr request

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -381,7 +381,8 @@
     "tilesLoadingDoubleBuffer": {
     	"debounceTimeInMs": 500,
 	    "timeoutInMs": 3000
-    }
+    },
+	 "floatingPositionSuffix": ""
   },
   "menuConfig": {
     "menuItems": {{ getv "/ansyn/menu/items" "null" }},
