(fix): fixed the requested bug

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -38,8 +38,8 @@
 			i {
 				opacity: .6;
 			}
-			&:hover i {
-				opacity: .8;
+			&:hover:not(:disabled) {
+				background: rgba(0, 0, 0, 0.5);
 			}
 		}
 
