--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -40,7 +40,11 @@
 			}
 			&:hover:not(:disabled) {
 				background: rgba(0, 0, 0, 0.5);
+				i {
+				opacity: 0.8;
 			}
+			}
+
 		}
 
 		button {
