(fix): fixed the requested bug (#2133)
* (fix): fixed the requested bug

* (fix): fixed pr requested changes

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -38,9 +38,13 @@
 			i {
 				opacity: .6;
 			}
-			&:hover i {
-				opacity: .8;
+			&:hover:not(:disabled) {
+				background: rgba(0, 0, 0, 0.5);
+				i {
+				opacity: 0.8;
 			}
+			}
+
 		}
 
 		button {
