--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -32,7 +32,7 @@
 			<li>
 				<p>
 					<button [class.active]="clickMenuProps.showColorPicker" (click)="toggleColorPicker()">
-						<i class="icon-annotation-color" tooltip-value="Color Picker" tooltip-class="bottom"></i>
+						<i class="icon-annotation-color" tooltip-value="Color" tooltip-class="bottom"></i>
 					</button>
 					<ansyn-annotations-color
 						[show]="clickMenuProps.showColorPicker"
