--- a/src/app/@ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/assets/styles/icons.css
@@ -328,8 +328,10 @@
 }
 .icon-hide-menu:before {
 	content: '\e92a';
+	/*content: "\e91c";*/
 }
 
 .icon-show-menu:before {
 	content: '\e92a';
+	/*content: "\e91c";*/
 }
