Fix menu collapse (#2136)
* feat: collapse uncollapse animations

* back to base map

* fix: CR request changes

* fix: chrome 44

* fix: cr

* fix: ansyn tests

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -58,6 +58,10 @@
 				background: black;
 				border: 1px solid grey;
 				flex: 6;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 			}
 
 			&.small-icon-button {
