fix ruler icon and share link in component

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -3,7 +3,7 @@
 :host {
 	&.component {
 		.app{
-			ansyn-popover.default-case div.pop-hover:hover .pop-content, .pop-content.visible {
+		/deep/ ansyn-popover.default-case div.pop-hover .pop-content {
 				visibility: hidden !important;
 			}
 			div.menu {
