tb url to config (#161)

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -146,6 +146,9 @@
 	}
   },
   "mapSourceProvidersConfig": {
+  	"TB": {
+  		"baseUrl": "{{ getv "/ansyn/tb/baseurl" "http://localhost:10010/v2/api" }}"
+  	},
   	"BING": {
     	"key": "AsVccaM44P5n-GYKXaV0oVGdTI665Qx_sMgYBSYRxryH2pLe92iVxUgEtwIt8des",
     	"styles": [ "AerialWithLabels" ]
