--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -36,7 +36,7 @@
 					</ansyn-annotations-weight>
 				</p>
 			</li>
-			<li>
+			<li class="li-icon-annotation-color">
 				<p>
 					<button [class.active]="clickMenuProps.showColorPicker" (click)="toggleColorPicker()">
 						<i class="icon-annotation-color" tooltip-value="Color Picker" tooltip-class="bottom"></i></button>
@@ -49,7 +49,7 @@
 				</p>
 			</li>
 
-			<li>
+			<li class='li-removeFeature'>
 				<button class='removeFeature' (click)="removeFeature()" tooltip-value="Delete" tooltip-class="bottom"><i class="icon-close"></i></button>
 			</li>
 		</ul>
