--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.html
@@ -11,7 +11,7 @@
 					Auto Save
 				</div>
 				<div class="cases-table-head-col">
-					Owner
+					Role
 				</div>
 				<div class="cases-table-head-col">
 					Last Modified
@@ -54,7 +54,7 @@
 				</ng-template>
 
 				<div class="cases-table-body-col">
-					{{entities[id].owner}}
+					{{entities[id].role}}
 				</div>
 
 				<div class="cases-table-body-col">
