fix: auto save on save case

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -13,7 +13,7 @@
 				<button [class.active]="clickMenuProps.showMeasures" (click)="toggleMeasures()"><i
 					class="icon-tools-ruler" tooltip-value="Measures" tooltip-class="bottom"></i></button>
 			</li>
-			<li>
+			<li class="li-annotation-label">
 				<button [class.active]="clickMenuProps.showLabel" (click)="toggleLabel('showLabel')"><i
 					class="icon-annotation-label" tooltip-value="Label" tooltip-class="bottom"></i>
 				</button>
