--- a/src/app/app/components/ansyn-host/ansyn-host.component.less
+++ b/src/app/app/components/ansyn-host/ansyn-host.component.less
@@ -1,6 +1,6 @@
 ansyn-app {
 	&.GUEST {
-		/deep/ #contextGeoFilter, /deep/ li.line-width-selection, /deep/ li.li-icon-annotation-color, /deep/ li.li-removeFeature, /deep/ .menu-btn:not(.Contact-Us), /deep/ #dataInputFilter, /deep/ #orientation, /deep/ #editGeoFilter, /deep/ #Time, /deep/ button.remove-overlay {
+		/deep/ #contextGeoFilter, /deep/ li.line-width-selection, /deep/ li.li-icon-annotation-color, /deep/ li.li-removeFeature, /deep/ .menu-btn:not(.Contact-Us), /deep/ #dataInputFilter, /deep/ #orientation, /deep/ #editGeoFilter, /deep/ #Time, /deep/ button.remove-overlay, /deep/ .li-annotation-label {
 			display: none !important;
 		}
 	}
