Small issue fix (#169)
* change beg to bug

* change airbus sensor name

* change login header

* default count 0

* fix load tile error & base map title change

* pr fixes

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1201,11 +1201,29 @@
     				"collapsed": true,
     				"children": [
     				  {
-    					"text": "NL-01",
+    					"text": "PHR1A",
     					"value": {
-    					  "sensorType": "NL-01"
+    					  "sensorType": "PHR1A"
     					}
-    				  }
+    				  },
+    				  {
+						"text": "PHR1B",
+						"value": {
+						  "sensorType": "PHR1B"
+						}
+					  },
+					  {
+						"text": "SPOT6",
+						"value": {
+						  "sensorType": "SPOT6"
+						}
+					  },
+					  {
+						"text": "SPOT7",
+						"value": {
+						  "sensorType": "SPOT7"
+						}
+					  }
     				]
     		  }
     	},
