--- a/src/app/drone/contact-us/contact-us/contact-us.component.html
+++ b/src/app/drone/contact-us/contact-us/contact-us.component.html
@@ -3,6 +3,6 @@
 		Please feel free contact us on any issue at: <a target="_blank" href="mailto:ansyn@webiks.com">ansyn@webiks.com</a>
 	</p>
 	<p>
-		You can submit a beg report/improvement proposal via this form: <a target="_blank" href="https://goo.gl/forms/nOtkXbfRjUa5ZRjF3">https://goo.gl/forms/nOtkXbfRjUa5ZRjF3</a>
+		You can submit a bug report/improvement proposal via this form: <a target="_blank" href="https://goo.gl/forms/nOtkXbfRjUa5ZRjF3">https://goo.gl/forms/nOtkXbfRjUa5ZRjF3</a>
 	</p>
 </div>
