--- a/src/app/app/login/login/login.component.html
+++ b/src/app/app/login/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper">
 	<form class="login-form" #loginForm="ngForm" (ngSubmit)="login()">
-
-		<h1 class="title">AnSyn</h1>
+		<h1 class="title">Ansyn</h1>
+		<h3 class="title">Ramon AI Hackathon</h3>
 		<div class="fields">
 
 			<div class="field">
