--- a/src/app/app/login/login/login.component.less
+++ b/src/app/app/login/login/login.component.less
@@ -32,13 +32,24 @@
 
 			h1.title {
 				padding: 0;
-				margin: 107px 0 0 0;
+				margin: 90px 0 0 0;
 				text-align: center;
 				color: white;
 				font-style: normal;
 				font-weight: bold;
 				line-height: normal;
 				font-size: 120px;
+				text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);
+			}
+			h3.title {
+				padding: 0;
+				margin: 30px 0 0 0;
+				text-align: center;
+				color: white;
+				font-style: normal;
+				font-weight: bold;
+				line-height: normal;
+				font-size: 80px;
 				text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);
 			}
 
