Initial commit: a new config section for map providers

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -138,6 +138,11 @@
 		"apiKey": "AofqJGk-uEej_Pv7hkbpXh6H3pb54luGZj6lfe90ksZEoBY-JmgTwGE2s9TF6peC"
 	}
   },
+  "mapProvidersConfig": {
+  	"openLayersMap": {
+  		"defaultMapSource": "BING"
+  	}
+  },
   "mapSourceProvidersConfig": {
   	"BING": {
     	"key": "AsVccaM44P5n-GYKXaV0oVGdTI665Qx_sMgYBSYRxryH2pLe92iVxUgEtwIt8des",
