Taking defaultMapSource from config, instead of from class property

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -141,6 +141,9 @@
   "mapProvidersConfig": {
   	"openLayersMap": {
   		"defaultMapSource": "BING"
+  	},
+  	"CesiumMap": {
+  		"defaultMapSource": "BING_CESIUM"
   	}
   },
   "mapSourceProvidersConfig": {
