--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -59,8 +59,7 @@
               },
               "flags": {},
               "worldView": {
-				"mapType": "openLayersMap",
-				"sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}"
+				"mapType": "openLayersMap"
               },
               "id": null
             }
@@ -137,6 +136,14 @@
 		"url": "http://dev.virtualearth.net/REST/v1/Locations?locality=$searchString&maxResults=1&key=$apiKey",
 		"apiKey": "AofqJGk-uEej_Pv7hkbpXh6H3pb54luGZj6lfe90ksZEoBY-JmgTwGE2s9TF6peC"
 	}
+  },
+  "mapProvidersConfig": {
+  	"openLayersMap": {
+  		"defaultMapSource": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}"
+  	},
+  	"CesiumMap": {
+  		"defaultMapSource": "BING_CESIUM"
+  	}
   },
   "mapSourceProvidersConfig": {
   	"BING": {
