Add "show" flag to the relevant ngIf's

--- a/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
@@ -46,11 +46,11 @@
 			</div>
 		</div>
 
-		<div class="show-more-less" *ngIf="!isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite">
+		<div class="show-more-less" *ngIf="!isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite && show">
 			<span (click)="toggleShowMoreLess()">SHOW MORE</span>
 		</div>
 
-		<div class="show-more-less" *ngIf="isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite">
+		<div class="show-more-less" *ngIf="isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite && show">
 			<span (click)="toggleShowMoreLess()">SHOW LESS</span>
 		</div>
 
