--- a/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
@@ -22,7 +22,7 @@
 
 	<ng-template #filterBody>
 		<div class="fields" *ngIf="!showOnlyFavorite" #fields [@fieldsTrigger]="show">
-			<div *ngIf="metadataFromState && !metadataFromState.shouldBeHidden()" [ngSwitch]="metadataFromState?.type">
+			<div *ngIf="metadataFromState" [ngSwitch]="metadataFromState?.type">
 
 				<ansyn-enum-filter-container
 					*ngSwitchCase="'Enum'"
