hide-filter-sections-if-parameters-not-exist (#2163)
* check if this filter should be hidden

* Since we now check shouldBeHidden() at the root of the filter segment, there is no need to check it inside the segment

* Add guard (there was a crash when the app started with the filters tab open)

--- a/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/filter-container/filter-container.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="!metadataFromState?.shouldBeHidden()">
 
 	<div class="title-row">
 
@@ -22,7 +22,7 @@
 
 	<ng-template #filterBody>
 		<div class="fields" *ngIf="!showOnlyFavorite" #fields [@fieldsTrigger]="show">
-			<div *ngIf="metadataFromState && !metadataFromState.shouldBeHidden()" [ngSwitch]="metadataFromState?.type">
+			<div *ngIf="metadataFromState" [ngSwitch]="metadataFromState?.type">
 
 				<ansyn-enum-filter-container
 					*ngSwitchCase="'Enum'"
