Add overflow hidden + ellipsis to name field

--- a/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/menu-items/cases/components/cases-table/cases-table.component.less
@@ -135,7 +135,9 @@ div.cases-table {
 					flex: 1;
 				}
 				div.cases-table-case-name-col {
-					flex: 1.5
+					flex: 1.5;
+					overflow: hidden;
+					text-overflow: ellipsis;
 				}
 				.cases-table-auto-save-col {
 					padding-top: 20px;
