Manage the layer name on the data layers tab

--- a/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.less
@@ -13,6 +13,10 @@ div.layer {
 		visibility: visible;
 	}
 
+	ansyn-checkbox {
+		overflow: hidden;
+	}
+
 	span.only-filter {
 		visibility: hidden;
 		font-size: 12px;
