--- a/src/app/@ansyn/core/forms/ansyn-checkbox/ansyn-checkbox.component.less
+++ b/src/app/@ansyn/core/forms/ansyn-checkbox/ansyn-checkbox.component.less
@@ -60,5 +60,13 @@
 	div.ansyn-checkbox-text {
 		color: white;
 		margin-left: 5px;
+		overflow: hidden;
+
+		label {
+			text-overflow: ellipsis;
+			overflow: hidden;
+			display: inline-block;
+			max-width: 100%;
+		}
 	}
 }
