Fix long layer name in download-layer popup

--- a/src/app/@ansyn/core/less/common.less
+++ b/src/app/@ansyn/core/less/common.less
@@ -1,9 +1,10 @@
 @import "z-index-globals";
 @import "colors";
+@import "globals";
 
 .default-menu-item {
 	position: relative;
-	width: 430px;
+	width: @ansyn-menu-width;
 	display: block;
 	height: 100%;
 	overflow: hidden;
