annotation control: fix dummy arrow

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -9,7 +9,7 @@
 				*ngFor="let layer of annotationLayerIds$ | async">{{ layer.name }}
 			</option>
 		</select>
-		<span class="arrow">▼</span>
+		<span class="dummy-arrow">▼</span>
 	</div>
 </div>
 
