--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -148,10 +148,11 @@
 	}
 }
 
-span.arrow {
+span.dummy-arrow {
 	position: relative;
 	font-size: 7px;
 	right: 10px;
 	color: white;
 	top: -1px;
+	pointer-events: none;
 }
