annotation control (not finished)

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -28,12 +28,16 @@
 			width: 100%;
 			border-bottom: 1px solid;
 			padding: 7px 0;
+			display: flex;
+			overflow: hidden;
+
 			select.active-annotation-layer {
 				background: transparent;
 				border: none;
 				color: white;
 				outline: none;
 				border-bottom: 1px solid white;
+				margin-left: 5px;
 				margin-top: 2px;
 				appearance: none;
 				padding-right: 18px;
