--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -32,6 +32,7 @@
 			overflow: hidden;
 
 			select.active-annotation-layer {
+				width: 100%;
 				background: transparent;
 				border: none;
 				color: white;
@@ -124,7 +125,7 @@
 				flex-direction: column;
 				position: absolute;
 				top: 35px;
-				left: 0px;
+				left: 0;
 				overflow: hidden;
 				padding: 0;
 				margin: 0;
