Preserving quotes and question mark, when the text is clipped

--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.less
@@ -14,9 +14,14 @@ div.edit-layer {
 
 		h4 {
 			margin: 0;
-			max-width: 100%;
-			overflow: hidden;
-			text-overflow: ellipsis;
+			display: flex;
+
+			span {
+				display: inline-block;
+				max-width: 100%;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 
 		.bottom-btns {
