--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/download-layers/download-layers.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/download-layers/download-layers.component.less
@@ -11,9 +11,14 @@
 		position: relative;
 		h4 {
 			margin: 0;
-			max-width: 100%;
-			overflow: hidden;
-			text-overflow: ellipsis;
+			display: flex;;
+
+			span {
+				display: inline-block;
+				max-width: 100%;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 		div.export-buttons {
 			margin-top: 15px;
