--- a/src/app/@ansyn/menu-items/cases/components/delete-case/delete-case.component.less
+++ b/src/app/@ansyn/menu-items/cases/components/delete-case/delete-case.component.less
@@ -3,9 +3,8 @@
 :host {
 	display: block;
 	position: absolute;
-	width: 337px;
+	width: @ansyn-menu-width;
 	top: 15px;
-	left: 30px;
 
 	.delete-icon {
 		font-size: 24px;
@@ -39,8 +38,15 @@
 			position: relative;
 			width: 100%;
 			height: 100%;
-			p {
+
+			.text {
+				display: flex;
+
 				span.name {
+					display: inline-block;
+					max-width: 100%;
+					overflow: hidden;
+					text-overflow: ellipsis;
 					color: #ff4545;
 					font-weight: bold;
 				}
