--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
@@ -11,7 +11,7 @@
 
 		<div class="bottom-btns">
 			<button type="button" (click)="closeModal()">Cancel</button>
-			<button [disabled]="!layerName.value">OK</button>
+			<button [disabled]="!layerName.value?.trim()">OK</button>
 		</div>
 	</form>
 </div>
