cannot-export-layer-with-long-name (#2169)
* Manage the layer name on the data layers tab

* tweaks

* Fix long layer name in download-layer popup

* annotation control: fix dummy arrow

* annotation control (not finished)

* manage long layer name in the annotations control

* manage long layer name in the delete layer popup (not finished)

* Preserving quotes and question mark, when the text is clipped

* On the way: fix also delete-case popup, for long case names

* Unit test fix

--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/download-layers/download-layers.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/download-layers/download-layers.component.less
@@ -1,4 +1,8 @@
+@import "core/less/globals";
+
 :host {
+	display: block;
+	max-width: @ansyn-menu-width;
 
 	div.download {
 		background: white;
@@ -7,12 +11,19 @@
 		position: relative;
 		h4 {
 			margin: 0;
+			display: flex;;
+
+			span {
+				display: inline-block;
+				max-width: 100%;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 		div.export-buttons {
 			margin-top: 15px;
 			display: flex;
 			button.format {
-				cursor: pointer;
 				cursor: pointer;
 				border: none;
 				font-style: normal;
