--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.less
@@ -5,12 +5,24 @@ div.edit-layer {
 	box-shadow: 0 0 13px 0 #2e2d46;
 	padding: 15px;
 	box-sizing: border-box;
-	width: 200px;
+	max-width: @ansyn-menu-width;
 
 	form.edit-layer-form {
 		position: relative;
 		width: 100%;
 		height: 100%;
+
+		h4 {
+			margin: 0;
+			display: flex;
+
+			span {
+				display: inline-block;
+				max-width: 100%;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
+		}
 
 		.bottom-btns {
 			margin-top: 10px;
