--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -28,12 +28,17 @@
 			width: 100%;
 			border-bottom: 1px solid;
 			padding: 7px 0;
+			display: flex;
+			overflow: hidden;
+
 			select.active-annotation-layer {
+				width: 100%;
 				background: transparent;
 				border: none;
 				color: white;
 				outline: none;
 				border-bottom: 1px solid white;
+				margin-left: 5px;
 				margin-top: 2px;
 				appearance: none;
 				padding-right: 18px;
@@ -120,7 +125,7 @@
 				flex-direction: column;
 				position: absolute;
 				top: 35px;
-				left: 0px;
+				left: 0;
 				overflow: hidden;
 				padding: 0;
 				margin: 0;
@@ -148,10 +153,11 @@
 	}
 }
 
-span.arrow {
+span.dummy-arrow {
 	position: relative;
 	font-size: 7px;
 	right: 10px;
 	color: white;
 	top: -1px;
+	pointer-events: none;
 }
