--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -14,3 +14,5 @@
 <button (click)="setLayout2maps()">Set layout 2 maps</button>
 
 <button (click)="displayOverlaysOnTwoMaps()">Display overlays on two maps</button>
+
+<button (click)="setMOverlays()">Display M overlays in timeline</button>
