1 config fix 2 unit test fix

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -104,7 +104,7 @@
     "updateCaseDebounceTime": 700,
     "useHash": true,
     "defaultSearchFromDeltaTime": {
-    	"unit": "months",
+    	"unit": "years",
     	"amount": 1
     }
   },
