--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -153,10 +153,10 @@
     "TileWMS": {
 
     },
-    "M_WMTS": {
-		"imageUrl":  "wmts?format=png&request=GetTile&layer={imagePath}&style=band&tileMatrixSet=Pixel&service=WMTS&version=1.0.0",
-		"thumbnailImageUrl":  "wms?layers={url}&request=GetMap&format=png&width=256&height=256&bbox={bbox}",
-		"capabilitiesUrl":  "/1.0.0/WMTSCapabilities.json",
+    "MARCO_WMTS": {
+		"imageUrl": "wmts?format=png&request=GetTile&layer={imagePath}&style=band&tileMatrixSet=Pixel&service=WMTS&version=1.0.0",
+		"thumbnailImageUrl": "wms?layers={url}&request=GetMap&format=png&width=256&height=256&bbox={bbox}",
+		"capabilitiesUrl": "/1.0.0/WMTSCapabilities.json",
 		"tilesServerUrl": "http://marco-polo.imisight.net/mp-gw/"
 	},
   	"ESRI_4326": {
