--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -15,4 +15,4 @@
 
 <button (click)="displayOverlaysOnTwoMaps()">Display overlays on two maps</button>
 
-<button (click)="setMOverlays()">Display M overlays in timeline</button>
+<button (click)="setMarcoOverlays()">Display Marco overlays in timeline</button>
