add-config-default-from-time (#2185)
* Adding config parameter defaultSearchFromDeltaTime, and using it

* 1 config fix
2 unit test fix

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -102,7 +102,11 @@
       "layers"
     ],
     "updateCaseDebounceTime": 700,
-    "useHash": true
+    "useHash": true,
+    "defaultSearchFromDeltaTime": {
+    	"unit": "years",
+    	"amount": 1
+    }
   },
   "layersManagerConfig": {
     "schema": "layers"
